# openprodtimer

./: .gitignore  COPYING  openprodtimer.cabal
installer/: package-linux.sh  package-win32.sh  simplified-gconv  strip-linux.sh  update-products.sh  win32.nsi
sounds-sources/: LongBreak.rg  ShortBreak.rg  WorkTime.rg
src/: Main.hs  Paths_openprodtimer.hs  prodtimer-main-script-linux.sh  syncplay.c
